@@ -1,5 +1,9 @@
 * What is new in gsl-2.4:
 
+** add const to declaration of appropriate gsl_rstat routines
+
+** bug fix for #45730: change gsl_sf_sin/cos to libm sin/cos
+
 ** fix Cholesky documentation regarding upper triangle on output
 
 ** added routines to compute integrals with Hermite quadrature
